[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Rémi Carton <remi.carton@gmail.com>"]

[tool.poetry.scripts]
advent = "advent.cli:day"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.7"
ipython = "^8.7.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
